--- a/01 Register Servlet/WebContent/index.html
+++ b/01 Register Servlet/WebContent/index.html
@@ -37,7 +37,7 @@
 
 				<tr>
 					<td>Enter your email</td>
-					<td><input type="email" name="user_name" /></td>
+					<td><input type="email" name="user_email" /></td>
 				</tr>
 				<!-- This is radio and here name has to be same  and values = that you want to provide -->
 				<tr>
